hw12_13_14_15_16_calendar/templates/deployment-calendar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-deployment
  labels:
    app: calendar
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: calendar:develop
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
            - containerPort: 50051
