hw12_13_14_15_16_calendar/templates/deployment-extra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extra-deployment
  labels:
    app: extra
    version: "1.0"
    component: "backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extra
  template:
    metadata:
      labels:
        app: extra
    spec:
      containers:
        - name: db
          image: postgres:latest
        - name: rb
          image: rabbitmq:latest
