hw12_13_14_15_16_calendar/templates/deployment-rb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rb-deployment
  labels:
    app: rb
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rb
  template:
    metadata:
      labels:
        app: rb
    spec:
      containers:
        - name: rb
          image: rabbitmq:latest
          ports:
            - containerPort: 5672     # AMQP
            - containerPort: 15672    # Web UI
