hw12_13_14_15_16_calendar/templates/deployment-sender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender-deployment
  labels:
    app: sender
    version: "1.0"
    component: "backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
        - name: sender
          image: sender:develop
