hw12_13_14_15_16_calendar/templates/service-calendar.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  selector:
    app: calendar
  ports:
    - name: http
      port: 8888       # Порт внутри кластера (на сервисе)
      targetPort: 8888 # Порт в контейнере
    - name: grpc
      port: 50051
      targetPort: 50051
