hw12_13_14_15_16_calendar/templates/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432         # Порт, по которому другие сервисы будут подключаться
      targetPort: 5432   # Порт внутри контейнера
