hw12_13_14_15_16_calendar/templates/service-rb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rb
spec:
  selector:
    app: rb
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
