hw12_13_14_15_16_calendar/templates/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-grpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: calendar-grpc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  name: grpc
