hw12_13_14_15_16_calendar/templates/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: calendar-http.local
      http:
        paths:
          - path: /http
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  name: http
